--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@popperjs/core": "^2.9.2",
         "axios": "^0.21",
         "bootstrap": "^5.0.2",
+        "clean-css-loader": "^3.0.0",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -23,6 +25,10 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "bootstrap-select": "^1.13.18",
+        "laravel-mix-clean": "^0.1.0",
+        "laravel-mix-clean-css": "^1.3.1",
+        "laravel-mix-purgecss": "^6.0.0",
         "startbootstrap-sb-admin": "^7.0.2"
     }
 }
