--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "bootstrap-select": "^1.13.18",
-        "laravel-mix-clean": "^0.1.0",
-        "laravel-mix-clean-css": "^1.3.1",
-        "laravel-mix-purgecss": "^6.0.0",
+        "bootstrap-select": "^1.14.0-beta2",
         "startbootstrap-sb-admin": "^7.0.2"
     }
 }
